--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^0.24.0",
     "ethers": "^5.5.4",
     "lodash": "^4.17.21",
-    "twit": "^2.2.11"
+    "twit": "^2.2.11",
+    "async": "^3.2.3",
+    "async-retry": "^1.3.3"
   }
 }
