--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "homepage": "https://github.com/dsgriffin/nft-sales-twitter-bot#readme",
   "dependencies": {
     "@alch/alchemy-web3": "^1.1.9",
+    "async": "^3.2.3",
+    "async-retry": "^1.3.3",
     "axios": "^0.24.0",
+    "dotenv": "^16.0.0",
     "ethers": "^5.5.4",
     "lodash": "^4.17.21",
-    "twit": "^2.2.11",
-    "async": "^3.2.3",
-    "async-retry": "^1.3.3"
+    "twit": "^2.2.11"
   }
 }
